<resources>
    <string name="app_name">Alarm Clock</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_set_alarm">Set Alarm</string>
    <string name="action_select_calenders">Calenders</string>

    // Google api key for Android
    <!--<string name="GOOGLE_API_KEY">AIzaSyDAHnyyEhXMvtd-rGn1ii2qQ-NfmwC7rDI</string>-->

    // Google api key for browser
    <string name="SHA1">71:95:64:24:4E:29:13:BB:ED:4E:0D:80:D2:3D:4A:4E:91:63:87:06</string>
    <string name="GOOGLE_MAPS_DIRECTION_API_KEY">AIzaSyDHRObgKZb24znTTZJXpxX7pZilCj2WDQE</string>
    <string name="GOOGLE_MAPS_DISTANCE_MATRIX_API_KEY">AIzaSyBuopsp7pmgOfLRiOJ_7qG81vha0PYuouI</string>
    <string name="GOOGLE_PLACES_API_KEY">AIzaSyA1boUOZivSQmGNmNB-DGLoYFRzwv3nP5s</string>

    <string name="action_search">Search</string>

    <string-array name="months">
        <item>@string/month_jan</item>
        <item>@string/month_feb</item>
        <item>@string/month_mar</item>
        <item>@string/month_apr</item>
        <item>@string/month_may</item>
        <item>@string/month_jun</item>
        <item>@string/month_jul</item>
        <item>@string/month_aug</item>
        <item>@string/month_sep</item>
        <item>@string/month_oct</item>
        <item>@string/month_nov</item>
        <item>@string/month_dec</item>
    </string-array>

    <string name="month_jan">jan</string>
    <string name="month_feb">feb</string>
    <string name="month_mar">mar</string>
    <string name="month_apr">apr</string>
    <string name="month_may">may</string>
    <string name="month_jun">jun</string>
    <string name="month_jul">jul</string>
    <string name="month_aug">aug</string>
    <string name="month_sep">sep</string>
    <string name="month_oct">oct</string>
    <string name="month_nov">nov</string>
    <string name="month_dec">dec</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_alarms">AlarmsActivity</string>
    <string name="no_alarms_msg">No alarms...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">welcome!</string>
    <string name="welcome_start">Lets Start!</string>
    <string name="welcome_msg">This application works best when it customized to you according to your individual times!</string>
    <string name="morning_time_txt">How long takes your morning routine? (In minutes)</string>
    <string name="times_title">Set your times</string>
    <string name="set_times">set</string>
    <string name="set_times_done">done</string>
    <string name="destination_time_txt">How long (in minutes), would you like to get earlier to your events?</string>
    <string name="destination_time_example">For example: If your appointment is at 10am and you want to be on get there at 9:45, set your answer to 15.</string>
    <string name="morning_time_hint">Morning Time</string>
    <string name="before_meeting_time_hint">Before meeting</string>
    <string name="select_event">Select an event:</string>
    <string name="set_alarm_btn">Set alarm</string>
</resources>