<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.obroshi.alarmclock.view.WelcomeActivity">

    <!--<FrameLayout-->
    <!--android:id="@+id/welcome_container"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"></FrameLayout>-->
    <RelativeLayout
        android:id="@+id/welcomeLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/welcomeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textAllCaps="true"
            android:textColor="@color/textColorPrimary"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/welcomeMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcomeTxt"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/welcome_msg"
            android:textColor="@color/textColorPrimary"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/welcomeStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="55dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/welcome_start"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/welcomeWakeUpLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/times_title"
            android:textAllCaps="true"
            android:textColor="@color/textColorPrimary"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/morningTImeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/morning_time_txt"
            android:textColor="@color/textColorPrimary"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/originTimeInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/originTime"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:gravity="center"
                    android:hint="@string/morning_time_hint"
                    android:inputType="number"
                    android:padding="8dp"
                    android:textColor="@color/textColorPrimary" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/setTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginLeft="20dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/set_times"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/welcomeDestinationLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/times_title"
            android:textAllCaps="true"
            android:textColor="@color/textColorPrimary"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/destinationTImeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/destination_time_txt"
            android:textColor="@color/textColorPrimary"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/destinationTimeInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/destinationTime"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:gravity="center"
                    android:hint="@string/before_meeting_time_hint"
                    android:inputType="number"
                    android:padding="8dp"
                    android:textColor="@color/textColorPrimary" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/doneBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginLeft="20dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/set_times_done"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
